mobile newsletter spacing updated and find a dealer transition resolved

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -81,6 +81,9 @@ body{
     height: 104px;
     width: calc(100% + 2px);
     background-color: $sky;
+    @media(max-width: 1100px){
+      height: 75px;
+    }
   }
 
   .secondary-button{
